limit image size with col

--- a/duo-guide-refactor.html
+++ b/duo-guide-refactor.html
@@ -186,16 +186,19 @@ body { padding-top: 100px; }
     <p><strong>Activate Duo Mobile</strong></p>
     <ol>
       <li>On your mobile phone, open the Duo Mobile application and tap <strong>+</strong> or <strong>Add account</strong>. Then tap&nbsp;<strong>Scan Barcode</strong>.<br>
-      <p><strong>NOTE:</strong>&nbsp;Use a free-standing monitor or large laptop to complete these steps. Barcode scanning on a compact display is challenging.</p>
+      <p><strong>NOTE:</strong>&nbsp;Use a large monitor or laptop to complete these steps.</p>
       </li>
-      <li>Use your mobile phone to scan the barcode shown on your computer screen.</li>
-      <li>After an account named "Case Western Reserve University" appears on your mobile phone, click&nbsp;<strong>Continue</strong> to .</li>
+      <li>Use your smartphone to scan the barcode shown on your computer screen.</li>
+      <li>After an account named "Case Western Reserve University" appears on your smartphone, click&nbsp;<strong>Continue</strong>.</li>
     </ol>
 
     <p><strong>Add a descriptive device name</strong></p>
     <ol>
       <li>Click the gray&nbsp;<strong>Actions</strong>&nbsp;menu to the right of the newly added number.<br>
-      <img src="https://guide.duosecurity.com/static/images/enrollment-platform.png" class="img-rounded"></li>
+      <p>&nbsp;</p>
+      <div class="row">
+      <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
+        <img src="https://guide.duosecurity.com/static/images/enrollment-complete.png" class="img-responsive"></div></div><p>&nbsp;</p></li>
       <li>Choose "Change Device Name&hellip;" and add a descriptive title for the number (ex., "My Work Mobile").</li>
       <li>Click the green check mark to complete name change.</li>
       <li>Click&nbsp;<strong>Done</strong>&nbsp;to save all changes and exit the device management interface.</li>
@@ -205,10 +208,10 @@ body { padding-top: 100px; }
     <ol>
       <li>Select your mobile phone from the dropdown box labelled "Device"</li>
       <li>Select the option for "Duo Push".</li>
-      <li>Click the green&nbsp;<strong>Log in</strong>&nbsp;button (Figure 6).</li>
-      <li>Open the Duo Mobile application on your mobile phone and tap the&nbsp;<strong>DUO PUSH</strong>&nbsp;button.</li>
-      <li>Tap the&nbsp;<strong>Approve</strong>&nbsp;button (Figure 7).</li>
-      <li>A webpage titled "Self-Enrollment Success" will appear on your laptop or desktop computer. You have successfully enrolled.</li>
+      <li>Click the green&nbsp;<strong>Log in</strong>&nbsp;button.</li>
+      <li>Open the Duo Mobile application on your mobile phone and tap <strong>DUO PUSH</strong>.</li>
+      <li>When prompted, tap <strong>Approve</strong>.</li>
+      <li>You've completed enrollment when an enrollment success message appears on your computer screen.</li>
     </ol>
   </div>
 </div>
