limit image size with col

--- a/duo-guide-refactor.html
+++ b/duo-guide-refactor.html
@@ -68,38 +68,11 @@ body { padding-top: 100px; }
 
 <h3>Overview</h3>
 
-<div class="row">
-<div class="col-md-12 col-sm-12">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a onclick="toggle_visibility('2fa-definition');">What is two-factor authentication?</a>
-      </h4>
-    </div>
-      
-  <div id="2fa-definition" class="panel-body" style="display:none">
-    <p>foo</p>
-      </div>
-    </div>
-</div>
-</div>
+<p class="lead"><strong>Two-factor authentication</strong> adds a second layer of security to your online CWRU accounts. Verifying your identity using a <strong>second factor</strong> (like your phone or other mobile device) prevents anyone but you logging in, even if they know your password.</p>
 
+<p>You'll be able to use two-factor authentication to protect your account after you've enrolled in Duo using the process below. You'll login as usual with your CWRU network ID and password, and then use your device to verify that it's you. You may choose to authenticate via SMS (text message), voice call, a one-time passcode or the Duo Mobile smartphone app.</p>
 
-<div class="row">
-<div class="col-md-12 col-sm-12">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
-        <a onclick="toggle_visibility('2fa-why');">Why two-factor authentication is important</a>
-      </h4>
-    </div>
-      
-  <div id="2fa-why" class="panel-body" style="display:none">
-    <p>Duo Security two-factor authentication enhances the security of your CWRU accounts by using your phone or connected mobile device to verify your identity. Two-factor authentication prevents anyone but you from accessing your valuable data and CWRU accounts, even if they know your password.</p>
-      </div>
-    </div>
-</div>
-</div> 
+<p><strong>No mobile phone?</strong> You can also use a landline or tablet, or request to purchase a hardware token. Duo lets you link multiple devices to your account, so you can use your mobile phone and a landline, a landline and a hardware token, two different mobile devices, etc.</p>
 
 <div class="row">
 <div class="col-md-12 col-sm-12">
