limit image size with col

--- a/duo-guide-refactor.html
+++ b/duo-guide-refactor.html
@@ -40,9 +40,9 @@ body { padding-top: 100px; }
   	<div class="container">
 		<div class="row">
 		<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-			<div class="visible-xs visible-sm hidden-md hidden-lg">
+			<div class="visible-xs visible-sm visible-md hidden-lg">
 				<h1 style="color: white">DUO <small style="color: #c8d1d7">Quick Start Guide</small></h1></div>
-			<div class="hidden-xs hidden-sm visible-md visible-lg">
+			<div class="hidden-xs hidden-sm hidden-md visible-lg">
 				<h1 style="color: white">DUO Two-Factor Authentication 
 				<small style="color: #c8d1d7">Quick Start Guide</small></h1></div>
 		</div>
@@ -64,11 +64,11 @@ body { padding-top: 100px; }
 
 <!-- start section to revise -->
 
-<!-- Content piece, "Overview" -->
-
-<h3>Overview</h3>
-
 <p class="lead"><strong>Two-factor authentication</strong> adds a second layer of security to your online CWRU accounts. Verifying your identity using a <strong>second factor</strong> (like your phone or other mobile device) prevents anyone but you logging in, even if they know your password.</p>
+
+<div class="row">
+      <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
+        <img src="https://guide.duosecurity.com/static/images/how-it-works.png" class="img-responsive"></div></div>
 
 <p>You'll be able to use two-factor authentication to protect your account after you've enrolled in Duo using the process below. You'll login as usual with your CWRU network ID and password, and then use your device to verify that it's you. You may choose to authenticate via SMS (text message), voice call, a one-time passcode or the Duo Mobile smartphone app.</p>
 
