--- a/duo-guide-refactor.html
+++ b/duo-guide-refactor.html
@@ -70,6 +70,8 @@ body { padding-top: 100px; }
       <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
         <img src="https://guide.duosecurity.com/static/images/how-it-works.png" class="img-responsive"></div></div>
 
+<p>&nbsp;</p>
+
 <p>You'll be able to use two-factor authentication to protect your account after you've enrolled in Duo using the process below. You'll login as usual with your CWRU network ID and password, and then use your device to verify that it's you. You may choose to authenticate via SMS (text message), voice call, a one-time passcode or the Duo Mobile smartphone app.</p>
 
 <p><strong>No mobile phone?</strong> You can also use a landline or tablet, or request to purchase a hardware token. Duo lets you link multiple devices to your account, so you can use your mobile phone and a landline, a landline and a hardware token, two different mobile devices, etc.</p>
