--- a/als-draft.html
+++ b/als-draft.html
@@ -9,7 +9,7 @@
 <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <script src="/bootstrap/js/bootstrap.min.js"></script>
 <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-
+<script src="https://togetherjs.com/togetherjs-min.js"></script>
 
 <script type="text/javascript">
 <!--
@@ -70,8 +70,14 @@ body { padding-top: 100px; }
 
 <p class="lead">Quickly and simply configure an Active Learning Space classroom for nearly any purpose in 3 steps.</p>
 
-<button onclick="javascript:window.print()" type="button" class="btn btn-default hidden-xs"><span class="glyphicon glyphicon-print"></span> Print</button>
-	
+
+<div class="row">
+  <div class="col-md-4 col-sm-4">
+  <button onclick="javascript:window.print()" type="button" class="btn btn-default hidden-xs"><span class="glyphicon glyphicon-print"></span> Print</button></div>
+  <div class="col-md-4 col-sm-4">
+  <button onclick="TogetherJS(this); return false;" type="button" class="btn btn-default hidden-xs"><span class="glyphicon glyphicon-user"></span> Live Help</button></div>
+</div>
+
 <p>&nbsp;</p>
 
 
