together.js added to POC als draft

--- a/als-draft.html
+++ b/als-draft.html
@@ -71,9 +71,8 @@ body { padding-top: 100px; }
 <p class="lead">Quickly and simply configure an Active Learning Space classroom for nearly any purpose in 3 steps.</p>
 
 
-<button onclick="javascript:window.print()" type="button" class="btn btn-default hidden-xs"><span class="glyphicon glyphicon-print"></span> Print</button></div>
-<button onclick="TogetherJS(this); return false;" type="button" class="btn btn-default hidden-xs"><span class="glyphicon glyphicon-user"></span> Live Help</button></div>
-</div>
+<button onclick="javascript:window.print()" type="button" class="btn btn-default hidden-xs"><span class="glyphicon glyphicon-print"></span> Print</button>
+<button onclick="TogetherJS(this); return false;" type="button" class="btn btn-default hidden-xs"><span class="glyphicon glyphicon-user"></span> Live Help</button>
 
 <p>&nbsp;</p>
 
