together.js added to POC als draft

--- a/als-draft.html
+++ b/als-draft.html
@@ -72,7 +72,7 @@ body { padding-top: 100px; }
 
 
 <button onclick="javascript:window.print()" type="button" class="btn btn-default hidden-xs"><span class="glyphicon glyphicon-print"></span> Print</button>
-<button onclick="TogetherJS(this); return false;" type="button" class="btn btn-default hidden-xs"><span class="glyphicon glyphicon-user"></span> Live Help</button>
+<button onclick="TogetherJS(this); return false;" type="button" class="btn btn-default"><span class="glyphicon glyphicon-user"></span> Live Help</button>
 
 <p>&nbsp;</p>
 
