together.js added to POC als draft

--- a/als-draft.html
+++ b/als-draft.html
@@ -89,7 +89,10 @@ body { padding-top: 100px; }
     </div>
       <div id="turn-on" class="panel-body" style="display:none">
         <ol>
-          <li>Using the control touch panel at the far right of the room, find the power icon and tap [on text]</li>
+          <li>Using the control touch panel at the far right of the room, find the power icon and tap [on text]<p>&nbsp;</p>
+      <div class="row">
+      <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
+        <img src="http://bit.ly/1MLxAAK" class="img-responsive"></div></div><p>&nbsp;</p></li>
           <li>Presenter and participant stations turn on.</li>
           <li>Individual input devices (e.g., document camera, media players, etc.) power on or return from standby when selected as input.
           <p>&nbsp;</p>
