together.js added to POC als draft

--- a/als-draft.html
+++ b/als-draft.html
@@ -92,7 +92,7 @@ body { padding-top: 100px; }
           <li>Using the control touch panel at the far right of the room, find the power icon and tap [on text]<p>&nbsp;</p>
       <div class="row">
       <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
-        <img src="http://bit.ly/1MLxAAK" class="img-responsive"></div></div><p>&nbsp;</p></li>
+        <img src="http://static4.wikia.nocookie.net/__cb20120815003918/adventuretimewithfinnandjake/images/8/80/Troll-face-problem.jpg" class="img-responsive"></div></div><p>&nbsp;</p></li>
           <li>Presenter and participant stations turn on.</li>
           <li>Individual input devices (e.g., document camera, media players, etc.) power on or return from standby when selected as input.
           <p>&nbsp;</p>
@@ -115,10 +115,10 @@ body { padding-top: 100px; }
     </div>
       <div id="present" class="panel-body" style="display:none">
         <ol>
-          <li>Cras justo odio</li>
-          <li>Dapibus ac facilisis in</li>
-          <li>Morbi leo risus</li>
-          <li>Porta ac consectetur ac</li>
+          <li>Choose your presentation source using the control application at the presenter station.</li>
+          <li>If you're using a laptop or external source, connect it now.</li>
+          <li>Drag your selected source to the front display(s) to start the projection system.</li>
+          <li>Optionally, to set up a monitor screen, drag the selected source to the center station at the rear of the room.</li>
           <li>Vestibulum at eros</li>
         </ol>
       </div>
