together.js added to POC als draft

--- a/als-draft.html
+++ b/als-draft.html
@@ -89,10 +89,11 @@ body { padding-top: 100px; }
     </div>
       <div id="turn-on" class="panel-body" style="display:none">
         <ol>
-          <li>Using the control touch panel at the far right of the room, find the power icon and tap [on text]<p>&nbsp;</p>
-      <div class="row">
-      <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
-        <img src="http://static4.wikia.nocookie.net/__cb20120815003918/adventuretimewithfinnandjake/images/8/80/Troll-face-problem.jpg" class="img-responsive"></div></div><p>&nbsp;</p></li>
+          <li>Using the control touch panel at the far right of the room, find the power icon and tap [on text]
+          <p>&nbsp;</p>
+            <div class="row">
+            <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
+              <img src="http://static4.wikia.nocookie.net/__cb20120815003918/adventuretimewithfinnandjake/images/8/80/Troll-face-problem.jpg" class="img-responsive"></div></div><p>&nbsp;</p></li>
           <li>Presenter and participant stations turn on.</li>
           <li>Individual input devices (e.g., document camera, media players, etc.) power on or return from standby when selected as input.
           <p>&nbsp;</p>
@@ -117,9 +118,12 @@ body { padding-top: 100px; }
         <ol>
           <li>Choose your presentation source using the control application at the presenter station.</li>
           <li>If you're using a laptop or external source, connect it now.</li>
-          <li>Drag your selected source to the front display(s) to start the projection system.</li>
-          <li>Optionally, to set up a monitor screen, drag the selected source to the center station at the rear of the room.</li>
-          <li>Vestibulum at eros</li>
+          <li>Drag your selected source to the front display(s) to start the projection system.
+          <p>&nbsp;</p>
+            <div class="row">
+            <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
+              <img src="http://static4.wikia.nocookie.net/__cb20120815003918/adventuretimewithfinnandjake/images/8/80/Troll-face-problem.jpg" class="img-responsive"></div></div><p>&nbsp;</p></li>
+          <li>Optionally, to set a presenter monitor, drag presentation source to the center station at the rear of the room.</li>
         </ol>
       </div>
     </div>
@@ -138,11 +142,14 @@ body { padding-top: 100px; }
     </div>
       <div id="share" class="panel-body" style="display:none">
         <ol>
-          <li>Using the control touch pad, choose any of the input devices shown at the bottom the screen.</li>
-          <li>Touch the device name to select it, then using your finger, drag it over the station where you want it to display.</li>
+          <li>Using the control touch pad or control application, choose any input source shown at the bottom the screen.</li>
+          <li>Touch the device name to select it, then drag it to the station where you want it to display.
+          <p>&nbsp;</p>
+            <div class="row">
+            <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
+              <img src="http://static4.wikia.nocookie.net/__cb20120815003918/adventuretimewithfinnandjake/images/8/80/Troll-face-problem.jpg" class="img-responsive"></div></div><p>&nbsp;</p></li>
           <li>To show at all stations, drag to 'all stations'.</li>
           <li>To show at all stations and on the projection screens, drag to 'all displays'.</li>
-          <li>Vestibulum at eros</li>
         </ol>
       </div>
     </div>
@@ -155,14 +162,13 @@ body { padding-top: 100px; }
 
 <div class="col-md-4 col-sm-4">
 <div class="panel panel-default">
-  <div class="panel-heading"><strong>Devices</strong></div>
+  <div class="panel-heading"><strong>Input Devices (sources)</strong></div>
     <div id="share" class="panel-body">
       <dl>
         <dt>Apple TV</dt><dd>This is what an Apple TV is. And what it does.</dd>
-        <dt>Cras justo odio</dt><dd></dd>
-        <dt>Cras justo odio</dt><dd></dd>
-        <dt>Cras justo odio</dt><dd></dd>
-        <dt>Cras justo odio</dt><dd></dd>
+        <dt>Bluray</dt><dd></dd>
+        <dt>Document Camera</dt><dd></dd>
+        <dt>Table PC</dt><dd></dd>
       </dl>
     </div>
   </div>
@@ -175,9 +181,9 @@ body { padding-top: 100px; }
       <dl>
         <dt>HDMI</dt><dd>What you get</dd>
         <dt>USB</dt><dd>Why you should not use it</dd>
-        <dt>Cras justo odio</dt><dd></dd>
-        <dt>Cras justo odio</dt><dd></dd>
-        <dt>Cras justo odio</dt><dd></dd>
+        <dt>VGA</dt><dd></dd>
+        <dt>DVI</dt><dd></dd>
+        <dt>Airplay</dt><dd></dd>
       </dl>
     </div>
   </div>
@@ -191,8 +197,9 @@ body { padding-top: 100px; }
         <dt>Airplay</dt><dd>Wireless connection from Apple devices to Apple TV.</dd>
         <dt>Dongle</dt><dd>A short wire to that connects one kind of thing to another kind of thing.</dd>
         <dt>Handshake</dt><dd></dd>
-        <dt>Cras justo odio</dt><dd></dd>
-        <dt>Cras justo odio</dt><dd></dd>
+        <dt>WiDi</dt><dd></dd>
+        <dt>Screen Mirroring</dt><dd></dd>
+        <dt>Resolution</dt><dd></dd>
       </dl>
     </div>
   </div>
