--- a/scripts/guidebook_app.html
+++ b/scripts/guidebook_app.html
@@ -40,8 +40,13 @@ Mobile application; Orientation; guidebook; student services; iOS; Android; Sche
 
 <h1>Guidebook<br>
 <small>End User Support</small></h1>
-<p>www.case.edu is the main home page for Case Western Reserve University (CWRU). Numerous websites are accessible through www.case.edu. CWRU allows users to operate websites on the campus network using URLs beneath the case.edu domain.</p>
+<p>On <code>Sunday, August 16</code>, in-person assistance will be available from <code>9am-4pm</code> in the <strong>Mandel Center for Non-Profit Organizations</strong> building at Orientation Headquarters.</p>
 
+<p>From <code>Monday, August 17-Friday, August 21</code>, in-person assistance will be available from <code>8am-5pm</code> in the <strong>Tinkham Veale University Center</strong> at Orientation Headquarters.</p>
+
+<p>Guests should also be encouraged to ask any Orientation Leader that they encounter, as any of our staff are prepared to assist.</p>
+
+<p><strong>NOTE:</strong> Many users are parents and family members. Network ID will not be required to resolve tickets.</p>
 
 <h3>Activate + Setup + Install</h3>
 <p><a href="#install">Install Guidebook for iOS</a><br>
@@ -71,7 +76,6 @@ Mobile application; Orientation; guidebook; student services; iOS; Android; Sche
 
 <ul>
 <li>Name</li>
-<li>CWRU Network ID</li>
 <li>Contact information (preferred and alternate)</li>
 <li>Problem or Request description</li>
 </ul>
@@ -79,7 +83,7 @@ Mobile application; Orientation; guidebook; student services; iOS; Android; Sche
 <h3 id="resolver-groups">Resolver Groups</h3>
 
 <div class="well well-sm">
-<p>There are no resolver groups for this product. If unable to resolve user issue, note any actions taken and direct user to [help tent location] if [date range], or [email address]. Close ticket.</p>
+<p>There are no resolver groups for this product. If unable to resolve user issue, note any actions taken and direct user to Orientation Headquarters, any Orientation Leader or, if outside of orientation times (see Desc. above), firstyearexperience@case.edu.</p>
 </div>
 
 <h2 id="how-to-escalate">How to Escalate</h2>
@@ -104,7 +108,7 @@ Mobile application; Orientation; guidebook; student services; iOS; Android; Sche
     <li>Go to your device app store and search for "Guidebook".</li>
     </ul>
   <li>Desktop, Windows Phone, non-Blackberry 10+, other: Navigate to guidebook.com and browse using your web browser.</li>
-  <li>If user is still having problems, direct to [address phone].</li>
+  <li>If user is still having problems, direct to firstyearexperience@case.edu.</li>
   <li>Resolve ticket.</li>
   </ol>
 
@@ -126,7 +130,7 @@ Mobile application; Orientation; guidebook; student services; iOS; Android; Sche
   <ol>
   <li>Gather resolution information and enter it into the ticket.</li>
   <li>Open the Guidebook app on your device.</li>
-  <li>Use the Search box at the top of the screen to search for your guide by name.</li>
+  <li>Use the Search box at the top of the screen to search for your guide by name ("Case Western Reserve University Orientation 2015", use partial for search).</li>
   <li>Choose desired guide from the results and tap "Get this Guide" to download it.</li>
   <li>Resolve ticket.</li>
   </ol>
@@ -137,7 +141,7 @@ Mobile application; Orientation; guidebook; student services; iOS; Android; Sche
   <ol>
   <li>Gather resolution information and enter it into the ticket.</li>
   <li>Open the Guidebook app on your device.</li>
-  <li>Use the Search box at the top of the screen to search for your guide by name.</li>
+  <li>Use the Search box at the top of the screen to search for your guide by name ("Case Western Reserve University Orientation 2015", use partial for search).</li>
   <li>Choose desired guide from the results and tap "Get this Guide" to download it.</li>
   <li>If your event organizer has provided a QR code to scan the guide, you can select the scan option. Center your camera on the QR code icon at the end of the Search bar, and it will automatically scan the code and take you to the guide.</li>
   <li>Resolve ticket.</li>
@@ -150,7 +154,7 @@ Mobile application; Orientation; guidebook; student services; iOS; Android; Sche
   <li>Gather resolution information and enter it into the ticket.</li>
   <li>Go to guidebook.com/browse/ on your device's internet browser.</li>
   <li>Click the search bar below "Select a Category".</li>
-  <li>Use the Search box at the top of the screen to search for your guide by name.</li>
+  <li>Use the Search box at the top of the screen to search for your guide by name ("Case Western Reserve University Orientation 2015", use partial for search).</li>
   <li>Choose desired guide from the results and tap its name to download it.</li>
   <li>Resolve ticket.</li>
   </ol>
@@ -184,15 +188,12 @@ Mobile application; Orientation; guidebook; student services; iOS; Android; Sche
 
   <ol>
   <li>Gather resolution information and enter it into the ticket.</li>
-  <li>The schedule module contains all event sessions sorted by date and start time.</li>
-  <li>Tap any session to get more information or to add the session to your personalized.</li>
-  <li>iOS only: Swipe a session to add the session to your personalized schedule.</li>
-  <li>Android only: Tap and hold a session to add the session to your personalized schedule.</li>
-  <li>To switch between days, tap the arrow to the side of the displayed day or tap on the date itself to load a dropdown menu of all event-filled dates.</li>
-  <li>Tap on any of the dates in the menu to open the schedule for that day.</li>
+  <li>The application home screen contains both the full program schedules (i.e., Parent and Family Orientation) and individual schedule tracks (i.e., Parents and Families of Mistletoe).</li>
   <li>Sessions may be color coded to denote specific tracks and audiences for the sessions.</li>
   <li>A schedule track functions identically to the full schedule.</li>
-  <li>The track exists as a segmented version of the larger schedule, tailored specifically to a particular sub-group of the conference.</li>
+  <li>The track exists as a segmented version of the larger schedule, tailored specifically to a particular sub-group of the orientation.</li>
+  <li>CWRU recommends that users refer to both for the best experience.</li> 
+  <li>Tap the schedule name to view it.</li>
   <li>Resolve ticket.</li>
   </ol>
 
