--- a/scripts/guidebook_app.html
+++ b/scripts/guidebook_app.html
@@ -63,7 +63,6 @@ Mobile application; Orientation; guidebook; student services; iOS; Android; Sche
 <p><a href="#navigation">General Navigation</a></p>
 
 <p><strong>Application Features</strong><br>
-<a href="#features-general-info">General Info</a><br>
 <a href="#features-schedule">Schedule and Schedule Tracks</a><br>
 <a href="#features-my-schedule">My Schedule</a><br>
 <a href="#features-to-do">To-do List</a></p>
@@ -173,7 +172,7 @@ Mobile application; Orientation; guidebook; student services; iOS; Android; Sche
   <li>Resolve ticket.</li>
   </ol>
 
-<h3 id="features-general-info">General Info</h3>
+<!-- <h3 id="features-general-info">General Info</h3>
   <p>back to <a href="#">top</a> </p>
 
   <ol>
@@ -181,7 +180,7 @@ Mobile application; Orientation; guidebook; student services; iOS; Android; Sche
   <li>icon</li>
   <li> Click here to view high-level details about the event. Depending on your event organizer, this section may contain a welcome letter as well as a quick link to the main venue of the event.</li>
   <li>Resolve ticket.</li>
-  </ol>
+  </ol> -->
 
 <h3 id="features-schedule">Schedule and Schedule Tracks</h3>
   <p>back to <a href="#">top</a> </p>
