--- a/scripts/quikpay-mobile.html
+++ b/scripts/quikpay-mobile.html
@@ -38,7 +38,8 @@ h3 { padding-top: 20px; }
 QuikPay; QuikPay mobile; Mobile; App; Bursar; Credit card processing; Payments; Payment; Nelnet; Nelnet Business Solutions; NBS; Student accounts; Bill; Tuition</p>
 
 <h1>QuikPay Mobile Application</h1>
-<p>Beginning Friday July 31, 2015, the mobile version of QuikPay will be made available for credit card payment processing. Users should contact the Bursar Office directly to resolve any questions regarding the application.</p>
+<p>Beginning Friday July 31, 2015, the mobile version of QuikPay will be made available for credit card payment processing. Users should contact the Bursar Office directly (M-F, 8:30 AM - 5:00 PM) to resolve any questions regarding the application.</p>
+<p>&nbsp;</p>
 <div class="panel panel-default">
   <div class="panel-heading">
     <h4 class="panel-title">Contact Information</h4></div>
