--- a/scripts/jobbss-retire.html
+++ b/scripts/jobbss-retire.html
@@ -34,10 +34,9 @@ h3 { padding-top: 20px; }
 <div class="container">
 
 <p>&nbsp;</p>
+<h1>CWRULink replaces JOBBSS</h1>
 <p><strong>Keywords</strong><br>
 JOBBSS; Student employment; Work study; CWRULink; Career Services</p>
-
-<h1>CWRULink replaces JOBBSS</h1>
 <p class="lead">CWRULink will be used for all student job listings. CWRULink replaces JOBBSS, which has been retired.</p>
 <p>&nbsp;</p>
 <div class="panel panel-default">
@@ -58,7 +57,7 @@ JOBBSS; Student employment; Work study; CWRULink; Career Services</p>
 		<p>&nbsp;</p>
 		</dd>
 
-		<dt>I used to look up Student Employment job postings in JOBBSS, but the system isn't available. Where to I look for a student employment job (work-study)?</dt>
+		<dt>I used to look up Student Employment job postings in JOBBSS, but the system isn't available.<br> Where to I look for a student employment job (work-study)?</dt>
 		<dd>JOBBSS has been retired. The new job posting system for Student Employment is CWRULink.<br>
 			<ol>
 				<li>Open an Internet browser and go to <a href="https://case-csm.symplicity.com/">https://case-csm.symplicity.com/</a></li>
