--- a/scripts/quikpay-mobile.html
+++ b/scripts/quikpay-mobile.html
@@ -38,7 +38,7 @@ h3 { padding-top: 20px; }
 QuikPay; QuikPay mobile; Mobile; App; Bursar; Credit card processing; Payments; Payment; Nelnet; Nelnet Business Solutions; NBS; Student accounts; Bill; Tuition</p>
 
 <h1>QuikPay Mobile Application</h1>
-<p>Beginning Friday July 31, 2015, the mobile version of QuikPay will be made available for credit card payment processing. Users should contact the Bursar Office directly (M-F, 8:30 AM - 5:00 PM) to resolve any questions regarding the application.</p>
+<p>Beginning Friday July 31, 2015, the mobile version of QuikPay will be made available for or students wishing to check their balances, access monthly statements, and make tuition ACH or credit card payments. Users should contact Student Financial Services directly (M-F, 8:30 AM - 5:00 PM) at <a href="mailto:studentaccounts@case.edu">studentaccounts@case.edu</a> to resolve any questions regarding the application.</p>
 <p>&nbsp;</p>
 <div class="panel panel-default">
   <div class="panel-heading">
