final edit, JOBBSS

--- a/scripts/jobbss-retire.html
+++ b/scripts/jobbss-retire.html
@@ -43,6 +43,24 @@ JOBBSS; Student employment; Work study; CWRULink; Career Services</p>
   <div class="panel-heading">
     <h4 class="panel-title">FAQ</h4></div>
   <div class="panel-body">
+
+  	<dl>
+		<dt>Reset CWRULink password</dt>
+		<dd>Open an Internet browser and go to <a href="https://case-csm.symplicity.com/">https://case-csm.symplicity.com/</a><br>
+			<ol>
+				<li>Select the type of employer you are. 
+					<ul>
+						<li>Non-faculty employers, select Employer.</li>
+						<li>Faculty employers, select Faculty.</li>
+					</ul></li>
+				<li>Click the "Forgot Password" link on the Sign in page.</li>
+			</ol>
+		<p>&nbsp;</p>
+		</dd>    
+	</dl>
+
+  <p class="lead">For employers</p>
+  <p>&nbsp;</p>
     <dl>
     	<dt>The JOBBSS system isn't available. How do I post a student employment job?</dt>
 		<dd>JOBBSS has been retired. The new job posting system for Student Employment is CWRULink.<br> 
@@ -56,17 +74,6 @@ JOBBSS; Student employment; Work study; CWRULink; Career Services</p>
 			</ol>
 		<p>&nbsp;</p>
 		</dd>
-
-		<dt>I used to look up Student Employment job postings in JOBBSS, but the system isn't available.<br> Where to I look for a student employment job (work-study)?</dt>
-		<dd>JOBBSS has been retired. The new job posting system for Student Employment is CWRULink.<br>
-			<ol>
-				<li>Open an Internet browser and go to <a href="https://case-csm.symplicity.com/">https://case-csm.symplicity.com/</a></li>
-				<li>Click "Student/Alumni".</li>
-				<li>Click the link that says, "If you are a current CWRU student, please login here with your Case Network ID and password."</li>
-			</ol>
-		<p>&nbsp;</p>
-		</dd>
-
 		<dt>Login to CWRULink.</dt>
 		<dd>
 			<ul>
@@ -76,21 +83,22 @@ JOBBSS; Student employment; Work study; CWRULink; Career Services</p>
 			</ul>
 		<p>&nbsp;</p>
 		</dd>
+	</dl>
 
-		<dt>Reset CWRULink password</dt>
-		<dd>Open an Internet browser and go to <a href="https://case-csm.symplicity.com/">https://case-csm.symplicity.com/</a><br>
+
+  <p class="lead">For students</p>
+  <p>&nbsp;</p>
+	<dl>
+		<dt>I used to look up Student Employment job postings in JOBBSS, but the system isn't available.<br> Where do I look for a student employment job (work-study)?</dt>
+		<dd>JOBBSS has been retired. The new job posting system for Student Employment is CWRULink.<br>
 			<ol>
-				<li>Select the type of employer you are. 
-					<ul>
-						<li>Non-faculty employers, select Employer.</li>
-						<li>Faculty employers, select Faculty.</li>
-					</ul></li>
-				<li>Click the "Forgot Password" link on the Sign in page.</li>
+				<li>Open an Internet browser and go to <a href="https://case-csm.symplicity.com/">https://case-csm.symplicity.com/</a></li>
+				<li>Click "Student/Alumni".</li>
+				<li>Click the link that says, "If you are a current CWRU student, please login here with your Case Network ID and password."</li>
 			</ol>
 		<p>&nbsp;</p>
 		</dd>
-
-		<dt>I'm in CWRULink but how do I find Student Employment jobs?</dt>
+		<dt>I'm in CWRULink. How do I find Student Employment jobs?</dt>
 		<dd>Filter by Position Type for "Student Employment and/or Work-Study". This search will return all job postings for on and off campus student employment, both work-study and non-work study.</dd>
 	</dl>
   </div>
