final edit, JOBBSS

--- a/scripts/jobbss-retire.html
+++ b/scripts/jobbss-retire.html
@@ -37,7 +37,7 @@ h3 { padding-top: 20px; }
 <h1>CWRULink replaces JOBBSS</h1>
 <p><strong>Keywords</strong><br>
 JOBBSS; Student employment; Work study; CWRULink; Career Services</p>
-<p class="lead">CWRULink will be used for all student job listings. CWRULink replaces JOBBSS, which has been retired.</p>
+<p class="lead">CWRULink will be used for all student job listings. CWRULink replaces JOBBSS, which has been retired. If you are unable to answer any question, direct the user to direct the question to <a href="mailto:careers@cas.edu">careers@case.edu</a>.</p>
 <p>&nbsp;</p>
 <div class="panel panel-default">
   <div class="panel-heading">
@@ -59,8 +59,7 @@ JOBBSS; Student employment; Work study; CWRULink; Career Services</p>
 		</dd>    
 	</dl>
 
-  <p class="lead">For employers</p>
-  <p>&nbsp;</p>
+  <p class="lead"><strong>For employers</strong></p>
     <dl>
     	<dt>The JOBBSS system isn't available. How do I post a student employment job?</dt>
 		<dd>JOBBSS has been retired. The new job posting system for Student Employment is CWRULink.<br> 
@@ -86,8 +85,7 @@ JOBBSS; Student employment; Work study; CWRULink; Career Services</p>
 	</dl>
 
 
-  <p class="lead">For students</p>
-  <p>&nbsp;</p>
+  <p class="lead"><strong>For students</strong></p>
 	<dl>
 		<dt>I used to look up Student Employment job postings in JOBBSS, but the system isn't available.<br> Where do I look for a student employment job (work-study)?</dt>
 		<dd>JOBBSS has been retired. The new job posting system for Student Employment is CWRULink.<br>
