--- a/scripts/jobbss-retire.html
+++ b/scripts/jobbss-retire.html
@@ -37,7 +37,7 @@ h3 { padding-top: 20px; }
 <h1>CWRULink replaces JOBBSS</h1>
 <p><strong>Keywords</strong><br>
 JOBBSS; Student employment; Work study; CWRULink; Career Services</p>
-<p class="lead">CWRULink will be used for all student job listings. CWRULink replaces JOBBSS, which has been retired. If you are unable to answer any question, direct the user to emasil his or her question to <a href="mailto:careers@cas.edu">careers@case.edu</a>.</p>
+<p class="lead">CWRULink will be used for all student job listings. CWRULink replaces JOBBSS, which has been retired. If you are unable to answer any question, direct the user to email his or her question to <a href="mailto:careers@cas.edu">careers@case.edu</a>.</p>
 <p>&nbsp;</p>
 <div class="panel panel-default">
   <div class="panel-heading">
