DUO guide updates

--- a/duo-guide-refactor.html
+++ b/duo-guide-refactor.html
@@ -42,7 +42,7 @@ body { padding-top: 100px; }
 		<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 			<div class="visible-xs visible-sm visible-md hidden-lg">
 				<h1 style="color: white">DUO <small style="color: #c8d1d7">Quick Start Guide</small></h1></div>
-			<div class="hidden-xs hidden-sm hidden-md visible-lg">
+			<div class="visible-lg hidden-xs hidden-sm hidden-md">
 				<h1 style="color: white">DUO Two-Factor Authentication 
 				<small style="color: #c8d1d7">Quick Start Guide</small></h1></div>
 		</div>
