--- a/guides/duo-guide-refactor.html
+++ b/guides/duo-guide-refactor.html
@@ -187,16 +187,8 @@ body { padding-top: 100px; }
       <li>Open the <a href="https://webapps.case.edu/duo/webauth.py">Duo Security self-enrollment page</a> using a laptop or desktop computer.</li>
       <li>When prompted, type in your CWRU network ID and password.</li>
       <li>Click <strong>Start Setup</strong>.</li>
-      <li>Choose "Tablet" as your device type and click&nbsp;<strong>Continue</strong>.<br>
-      <p>&nbsp;</p>
-      <div class="row">
-      <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
-        <img src="https://guide.duosecurity.com/static/images/enrollment-choose.png" class="img-responsive"></div></div><p>&nbsp;</p></li>
-      <li>Choose your operating system (e.g., iOS, Android) and click&nbsp;<strong>Continue</strong>.<br>
-      <p>&nbsp;</p>
-      <div class="row">
-      <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
-        <img src="https://guide.duosecurity.com/static/images/enrollment-platform.png" class="img-responsive"></div></div><p>&nbsp;</p></li>
+      <li>Choose "Tablet" as your device type and click&nbsp;<strong>Continue</strong>.</li>
+      <li>Choose your operating system (e.g., iOS, Android) and click&nbsp;<strong>Continue</strong>.</li>
       <li>Search for "Duo Mobile" in your tablet's application store and then install it.</li>
       <li>Return to your computer. Choose "I have Duo Mobile installed" and click&nbsp;<strong>Continue</strong>.</li>
     </ol>
