--- a/guides/duo-guide-refactor.html
+++ b/guides/duo-guide-refactor.html
@@ -280,12 +280,40 @@ body { padding-top: 100px; }
 
 <h3>Authenticate with a Supported Device</h3>
 
+
+<table class="table table-striped table-condensed">
+<thead>
+  <tr>
+    <th colspan="2">Duo Push (mobile application)</th>
+    <th>Duo Mobile Passcode</th>
+    <th>Voice Call</th>
+    <th>Text Message (SMS)</th>
+  </tr>
+</thead>
+
+<tbody>
+  <tr>
+    <th>Smartphone</th><td><span class="glyphicon glyphicon-ok"></span></td><td><span class="glyphicon glyphicon-ok"></span></td><td><span class="glyphicon glyphicon-ok"></span></td><td><span class="glyphicon glyphicon-ok"></span></td>
+  </tr> 
+  <tr>
+    <th>Basic Cell Phone</th><td></td><td></td><td><span class="glyphicon glyphicon-ok"></span></td><td><span class="glyphicon glyphicon-ok"></span></td>
+  </tr>
+  <tr>
+    <th>Landline</th><td></td><td></td><td><span class="glyphicon glyphicon-ok"></span></td><td></td>
+  </tr>
+  <tr>
+    <th>Tablet</th><td><span class="glyphicon glyphicon-ok"></span></td><td><span class="glyphicon glyphicon-ok"></span></td><td></td><td></td>
+  </tr>
+</tbody>
+</table>
+
+
 <div class="row">
 <div class="col-md-12 col-sm-12">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h4 class="panel-title">
-        <a onclick="toggle_visibility('use-iphone');">iPhone &amp; iPad</a>
+        <a onclick="toggle_visibility('auth-push');">iPhone &amp; iPad</a>
       </h4>
     </div>
       
