--- a/guides/duo-guide-refactor.html
+++ b/guides/duo-guide-refactor.html
@@ -284,25 +284,28 @@ body { padding-top: 100px; }
 <table class="table table-striped table-condensed">
 <thead>
   <tr>
-    <th colspan="2">Duo Push (mobile application)</th>
-    <th>Duo Mobile Passcode</th>
+    <td>Method</td>
+    <td>&nbsp;</td>
+    <th>Duo Push *</th>
+    <th>Passcode</th>
     <th>Voice Call</th>
     <th>Text Message (SMS)</th>
   </tr>
+  <tr><td colspan="6">Device</td></tr>
 </thead>
 
 <tbody>
   <tr>
-    <th>Smartphone</th><td><span class="glyphicon glyphicon-ok"></span></td><td><span class="glyphicon glyphicon-ok"></span></td><td><span class="glyphicon glyphicon-ok"></span></td><td><span class="glyphicon glyphicon-ok"></span></td>
+    <th colspan="2">Smartphone</th><td><span class="glyphicon glyphicon-ok"></span></td><td><span class="glyphicon glyphicon-ok"></span></td><td><span class="glyphicon glyphicon-ok"></span></td><td><span class="glyphicon glyphicon-ok"></span></td>
   </tr> 
   <tr>
-    <th>Basic Cell Phone</th><td></td><td></td><td><span class="glyphicon glyphicon-ok"></span></td><td><span class="glyphicon glyphicon-ok"></span></td>
+    <th colspan="2">Basic Cell Phone</th><td></td><td></td><td><span class="glyphicon glyphicon-ok"></span></td><td><span class="glyphicon glyphicon-ok"></span></td>
   </tr>
   <tr>
-    <th>Landline</th><td></td><td></td><td><span class="glyphicon glyphicon-ok"></span></td><td></td>
+    <th colspan="2">Landline</th><td></td><td></td><td><span class="glyphicon glyphicon-ok"></span></td><td></td>
   </tr>
   <tr>
-    <th>Tablet</th><td><span class="glyphicon glyphicon-ok"></span></td><td><span class="glyphicon glyphicon-ok"></span></td><td></td><td></td>
+    <th colspan="2">Tablet</th><td><span class="glyphicon glyphicon-ok"></span></td><td><span class="glyphicon glyphicon-ok"></span></td><td></td><td></td>
   </tr>
 </tbody>
 </table>
