duo changes add table

--- a/guides/duo-guide-refactor.html
+++ b/guides/duo-guide-refactor.html
@@ -279,14 +279,26 @@ body { padding-top: 100px; }
 <!-- New content arrangement -- Authenticate by Device -->
 
 <h3>Authenticate with a Supported Device</h3>
-
+<p>Case Duo supports a range of electronic devices including;<br>
+&nbsp;</p>
+  <ul>
+    <li>iOS smartphones and tablets</li>
+    <li>Android smartphones and tablets</li>
+    <li>Blackberry devices</li>
+    <li>Windows phones</li>
+    <li>Basic cell phones with and without text msg capabilities</li>
+    <li>Landlines, Softphones, etc.</li>
+    <li>Hardware tokens (e.g., Yubikey) *</li>
+  </ul>
+<p>&nbsp;</p>
+<p>Review the table below to identify what methods of authentication your enrolled devices support. Then, follow the instructions to authenticate a VPN session.</p>
 
 <table class="table table-striped table-condensed">
 <thead>
   <tr>
     <td>Method</td>
     <td>&nbsp;</td>
-    <th>Duo Push *</th>
+    <th>Duo Push **</th>
     <th>Passcode</th>
     <th>Voice Call</th>
     <th>Text Message (SMS)</th>
