--- a/guides/duo-guide-refactor.html
+++ b/guides/duo-guide-refactor.html
@@ -296,14 +296,13 @@ body { padding-top: 100px; }
 <table class="table table-striped table-condensed">
 <thead>
   <tr>
-    <th>&nbsp;</th>
+    <th rowspan="2"><span style="font-weight:normal;">Device</span></th>
     <th><span style="font-weight:normal;">Method</span></th>
     <th>Duo Push *</th>
     <th>Passcode</th>
     <th>Voice Call</th>
     <th>Text Message (SMS)</th>
   </tr>
-  <tr><td colspan="6">Device</td></tr>
 </thead>
 
 <tbody>
