finishing case duo

--- a/guides/duo-guide-refactor.html
+++ b/guides/duo-guide-refactor.html
@@ -59,7 +59,6 @@ body { padding-top: 100px; }
 <p>&nbsp;</p>
 
 <p class="lead">Quickly and simply configure DUO security 2-factor authentication for use with your cell phone, landline, smartphone, tablet, desktop computer, laptop or hardware token.</p>
-<p class="lead"><strong>Two-factor authentication</strong> adds a second layer of security to your online CWRU accounts. Verifying your identity using a <strong>second factor</strong> (like your phone or other mobile device) prevents anyone but you logging in, even if they know your password.</p>
 
 <div class="row">
       <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
@@ -68,27 +67,27 @@ body { padding-top: 100px; }
 
 <p>&nbsp;</p>
 
-<p>You'll be able to use two-factor authentication to protect your account after you've enrolled in Duo using the process below. You'll login as usual with your CWRU network ID and password, and then use your device to verify that it's you. You may choose to authenticate via SMS (text message), voice call, a one-time passcode or using the Duo Mobile smartphone application.</p>
+<p class="lead"><strong>Two-factor authentication</strong> adds a second layer of security to your online CWRU accounts. Verifying your identity using a <strong>second factor</strong> (like your phone or other mobile device) prevents anyone but you logging in, even if they know your password.</p>
+
 <p>&nbsp;</p>
 
 <div class="row">
 <div class="col-md-12 col-sm-12">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h4 class="panel-title">
-        <a onclick="toggle_visibility('2fa-how');">Recommended Equipment</a>
-      </h4>
+      <h4 class="panel-title">Recommended Equipment</h4>
     </div>
       
   <div id="2fa-how" class="panel-body">
     <p>Self enrollment is available via multiple methods. Information Security recommends all users enroll the following two devices:</p>
     <ul>
       <li>Smartphone using the mobile application for iOS or Android</li>
-      <li>Desk phone (landline) using the voice call method<br>    
-      <p><strong>NOTE:</strong> Use your desk phone as a backup in the case that a mobile phone is lost, stolen or damaged.</p></li>
+      <li>Desk phone (landline) using the voice call method<br>
+      <p>&nbsp;</p>    
+      <p><strong>NOTE:</strong> ITS Information Security recommends you use your desk phone as a backup in the case that a mobile phone is lost, stolen or damaged. However, because Case Duo lets you link multiple devices to your account, you may use any combination of compatible devices (e.g., a landline and a hardware token, two different mobile devices, tablet and a lanline, etc.)</p></li>
     </ul>
 
-    <p><strong>No mobile phone?</strong> You can also use a landline or tablet, or request to purchase a hardware token. Duo lets you link multiple devices to your account, so you can use your mobile phone and a landline, a landline and a hardware token, two different mobile devices, etc.</p>
+    <p><strong>No mobile phone?</strong> </p>
   </div>
 </div>
 
